[package]
name = "custom-user-network-transport"
version = "0.1.0"
authors = ["Kiyaan Pillai <kiyaan.pillai@gmail.com>"]
edition = "2024"

[features]
std = []
default = ["std"]

[dependencies]
bnum = { version = "0.13.0", features = [] }
libc = "0.2.171"
pnet = "0.35.0"
rand = "0.9.0"

windows = { version = "0.61", features = ["Win32_Networking_WinSock"] }
winsafe = { version = "0.0.23", features = ["kernel"] }

[profile.release]
debug = true
